# Yara_OVE

./: .gitignore  README.md  eboat_ocean_CC.py  esailor.yml  natalrn  natalrn.pub  phd  phd.pub  setup.py  yara_berry.yml
eboat_control/: CMakeLists.txt  package.xml
eboat_control/include/: bowVector.hh  missionControl.hh  propulsorController.hh  rudderController.hh  sailController.hh
eboat_control/python/projects/ESailor/: main.py  maneuvers.py  model_testing.py  model_testingcopy.py  sensor_array.py
eboat_control/python/scripts/: controls_v0.py  joystick_v0.py  ros_test.py  teste_camera.py  teste_camera_deep.py  teste_wxPython_threading.py
eboat_control/src/: CPS.cc  bowVector.cc  lidarController.cc  missionControl.cc  propulsorController.cc  rudderController.cc  sailController.cc  windSensor.cc
eboat_description/: CMakeLists.txt  package.xml
eboat_description/launch/: display.launch
eboat_description/models/boto/: model.config  model.sdf
eboat_description/models/boto/meshes/: boom_jib_link.stl  boom_main_link.stl  core.stl  main_sail_link.stl  mast_link.stl
eboat_description/models/box1/: model.config
eboat_description/models/box3/: model.config  model.sdf
eboat_description/models/box4/: model.sdf
eboat_description/models/buoy_green/: model.config  model.sdf
eboat_description/models/buoy_green/meshes/: part_2.stl
eboat_description/models/buoy_red/: model.config  model.sdf
eboat_description/models/buoy_red/meshes/: part_1.stl
eboat_description/models/buoy_yellow/: model.config  model.sdf
eboat_description/models/destinationMarker/: model.config  model.sdf
eboat_description/models/eboat/: model.config
eboat_description/models/eboat/meshes/: Deck - support_hack_port_2.dae  biruta.stl  boom.dae  boom_rope.stl  boom_rope_link.stl  bow.dae  bow.stl  camera_bow.stl  camera_top.stl  casco.dae  deck.dae  espuma.dae  espuma.stl  gate_1.dae  gate_1.stl  gate_2.dae  gate_2.stl  gate_3.dae  gate_3.stl  hack_port.dae  hack_port.stl  hack_starboard.dae  hack_starboard.stl  hull.dae  hull.stl  keel.dae  mast.dae  mast.stl  pino_da_bolina.dae  pino_da_bolina.stl  rope_a.dae  rope_b.dae  rope_c.dae  rudder.dae  rudder.stl  sail.dae  support_hack_port_1.dae  support_hack_port_2.dae  support_hack_port_3.dae  support_hack_port_4.dae  (+5 more)
eboat_description/models/eboat4/: model.config  model.sdf
eboat_description/models/eboat4/meshes/: camera_bow.stl  camera_box_windshield.stl  deck.stl  eletric_engine_base.stl  espuma.stl  hack_starboard.stl  hull_link.dae  hull_link.stl  keel_link.stl  mast_link.stl  rope_a.stl  rope_b.stl  rope_c.stl  rudder_link.stl  sail.stl  support_hack_port_1.stl  support_hack_port_3.stl  support_hack_starboard_1.stl  support_hack_starboard_2.stl  support_hack_starboard_3.stl  zed_len_l.stl
eboat_description/models/eboat4tr/: model.config
eboat_description/models/marker/: model.config  model.sdf
eboat_description/models/wayPointMarker/: model.config  model.sdf
eboat_description/urdf/: boto.urdf.xacro  eboat copy.urdf  eboat.gazebo  eboat.rviz  eboat.urdf  eboat.urdf.xacro  eboat4.urdf copy.xacro  eboat4.urdf.xacro  eboat41tr.urdf.xacro  eboat4_control_plugins.xacro  eboat4_physics_plugins.xacro  eboat4_sensors_plugins.xacro  eboat4tr.urdf copy.xacro  eboat4tr.urdf.xacro  eboat4trOD.urdf.xacro  eboat_control_plugins.xacro  eboat_dynamics_plugin.xacro  eboat_liftdrag_plugin.xacro  frames.gv  macros.xacro  materials.xacro  modified_urdf.urdf  urdf.py
eboat_gazebo/: CMakeLists.txt  package.xml  test.py
eboat_gazebo/launch/: boto.launch  boto_fixed_cam.launch  eboat.launch  empty_ocean.launch  ocean.launch  ocean_RL_training.launch  ocean_fixed_cam.launch
eboat_gazebo/models/sand_island_0/: model.config  model.sdf
eboat_gazebo/worlds/: eboat.world.xacro  empty_ocean.world.xacro  ocean.world.xacro  ocean.xacro  ocean_RL_training.world copy.xacro  ocean_RL_training.world.xacro  ocean_fixed_cam.world.xacro  two_boats.world  usv_wind_plugin.xacro
eboat_gazebo_plugins/: CMakeLists.txt  package.xml
eboat_gazebo_plugins/include/: WindsockPlugin.hh  liftDragForces.hh  sailLiftDragForces.hh  underWaterLiftDrag.hh  windControl.hh
eboat_gazebo_plugins/src/: WindsockPlugin.cc  atmosfericControl.cc  liftDragForces.cc  sailLiftDragForces.cc  underWaterLiftDrag.cc  windControl.cc
fortune612_description/: CMakeLists.txt  package.xml
fortune612_description/models/fortune612/: model.config  model.sdf
fortune612_description/models/fortune612/meshes/: deck.stl  keel_link.stl  left_wing_link.stl  right_wing_link.stl  rudder_link.stl
fortune612_description/urdf/: fortune612.urdf.xacro
fortune612_gazebo/: CMakeLists.txt  package.xml
fortune612_gazebo/launch/: ocean.launch  ocean_fixed_cam.launch
fortune612_gazebo/worlds/: ocean.world.xacro  ocean.xacro  ocean_fixed_cam.world.xacro
fortune612_plugins/: CMakeLists.txt  package.xml
fortune612_plugins/include/: controlLoop.hh
fortune612_plugins/src/: controlLoop.cc
yara_description/: CMakeLists.txt  package.xml
yara_description/models/boto/: model.config
yara_description/models/boto/meshes/: hull_link.stl
yara_description/models/box1/: model.sdf
yara_description/models/box2/: model.config  model.sdf
yara_description/models/box4/: model.config
yara_description/models/buoy_green/: model.config
yara_description/models/buoy_red/: model.sdf
yara_description/models/cargo_ship/: model.sdf
yara_description/models/eboat4/: hull_link.dae  model.config
yara_description/models/eboat4/meshes/: boom_cable_rigid.stl  bow_link.stl  (+7 more)
yara_description/models/eboat4tr/: model.config
yara_description/models/sailyacht/: model.config
yara_description/models/wayPointMarker/: model.sdf
yara_description/urdf/: boto.urdf.xacro  eboat4.urdf.xacro  eboat4_fixed.urdf.xacro  eboat4tr.urdf.xacro  eboat4trOD.urdf.xacro  fortune612.urdf.xacro
yara_gazebo_plugins/: CMakeLists.txt  package.xml
yara_gazebo_plugins/include/: WindsockPlugin.hh  liftDragForces.hh  underWaterLiftDrag.hh  windControl.hh
yara_gazebo_plugins/src/: WindsockPlugin.cc  atmosfericControl.cc  underWaterLiftDrag.cc
(+75 files in other folders)
