<?xml version="1.0"?>
<package format="2">
    <name>eboat_gazebo</name>
    <version>0.0.0</version>
    <description>The eboat_gazebo package</description>

    <maintainer email="evasconcellos@id.uff.br">araujo</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>Apache 2.0</license>


    <!-- Url tags are optional, but multiple are allowed, one per tag -->
    <!-- Optional attribute type can be: website, bugtracker, or repository -->
    <!-- Example: -->
    <!-- <url type="website">http://wiki.ros.org/eboat_gazebo</url> -->


    <author email="evasconcellos@id.uff.br">araujo Charles Vasconcellos</author>


    <buildtool_depend>catkin</buildtool_depend>
    
    <depend>gazebo_dev</depend>
    <depend>gazebo_ros</depend>
    <depend>wave_gazebo</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>xacro</depend>

    <exec_depend>gazebo_plugins</exec_depend>
    <exec_depend>gazebo_ros_control</exec_depend>
    <exec_depend>eboat_control</exec_depend>
    <exec_depend>eboat_description</exec_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
        <gazebo_ros gazebo_model_path="${prefix}/models"/>
        <gazebo_ros gazebo_media_path="${prefix}"/>
        <gazebo_ros plugin_path="${prefix}/../../lib"/>
    </export>
</package>