<?xml version="1.0"?>
<package format="2">
  <name>fortune612_plugins</name>
  <version>0.0.0</version>
  <description>The fortune612 plugins</description>

  <maintainer email="evasconcellos@id.uff.br">Eduardo</maintainer>

  <license>Apache 2.0</license>

  <author email="evasconcellos@id.uff.br">Eduardo</author>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros plugin_path="${prefix}/../../lib"/>
  </export>
</package>
