<?xml version="1.0"?>
<package format="2">
  <name>yara_description</name>
  <version>0.0.0</version>
  <description>The yara_description package</description>

  <maintainer email="evasconcellos@id.uff.br">Eduardo Charles Vasconcellos</maintainer>

  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <author email="evasconcellos@id.uff.br">Eduardo Charles Vasconcellos</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>xacro</depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>